<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="course_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email">vikhry-tatyana@yandex.ru</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_via">Поделиться через</string>
    <string name="singer_point_time"> • </string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="cover_image">Обложка альбома</string>
    <string name="test">test</string>
    <string name="default_track_time">00:00</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали ни одного плейлиста</string>
    <string name="no_favorites">Ваша медиатека пуста</string>
    <string name="player">Плейр</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="create">Создать</string>
    <string name="no_tracks">0 треков</string>
    <string name="one_track">1 трек</string>
    <string name="tracks_count">%d треков</string>
    <string name="add_playlist">Добавить в плейлист</string>

    <string name="playlist_created">Плейлист \"%s\" создан</string>


    <!-- Добавление в плейлист -->
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %s</string>

    <!-- Диалоги -->
    <string name="discard_title">Завершить создание плейлиста?</string>
    <string name="discard_message">Все несохраненные данные будут потеряны</string>
    <string name="discard_positive">Завершить</string>
    <string name="discard_negative">Отмена</string>

    <plurals name="tracks_count">
        <item quantity="zero">0 треков</item>
        <item quantity="one">1 трек</item>
        <item quantity="two">2 трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <string name="playlist">Плейлист</string>
    <string name="share">Поделиться</string>
    <string name="menu">Меню</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="delete_playlist_yes">Да</string>
    <string name="delete_playlist_no">Нет</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist_menu">Удалить плейлист</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_updated">Плейлист \"%s\" обновлён</string>
    <!-- Диалоги удаления -->
    <string name="delete_track_confirmation">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
</resources>