<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaFragment">

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.practicum.playlistmaker3.media.ui.MediaFragment"
        android:label="@string/media"
        tools:layout="@layout/fragment_media">
        <action
            android:id="@+id/action_mediaFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_mediaFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_mediaFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.practicum.playlistmaker3.search.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.practicum.playlistmaker3.settings.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.practicum.playlistmaker3.media.ui.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.practicum.playlistmaker3.player.ui.PlayerFragment"
        android:label="@string/player"
        tools:layout="@layout/fragment_player">
        <argument
            android:name="track"
            app:argType="com.practicum.playlistmaker3.search.ui.TrackUi" />
        <action
            android:id="@+id/action_playerFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
    </fragment>

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.practicum.playlistmaker3.playlist.ui.CreatePlaylistFragment"
        android:label="@string/new_playlist"
        tools:layout="@layout/fragment_create_playlist" />

</navigation>