<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_padding"
    tools:context=".settings.ui.SettingsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_margin">


        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/settings" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_padding"
        android:layout_marginBottom="@dimen/text_padding">

        <TextView
            style="@style/SettingsLinesStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/black_theme"
            android:layout_gravity="center_vertical"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/CompactSwitchMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            app:thumbTint="@color/switch_thumb_checked"
            app:trackTint="@color/switch_track_checked" />
    </FrameLayout>

    <TextView
        style="@style/SettingsLinesStyle"
        android:id="@+id/share_app"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share_mode_24" />

    <TextView
        style="@style/SettingsLinesStyle"
        android:id="@+id/message_support"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/ic_support_mode_24" />

    <TextView
        style="@style/SettingsLinesStyle"
        android:id="@+id/agreement"
        android:text="@string/agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24" />


</LinearLayout>