<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_padding"
    tools:context=".SettingsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_margin">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/arrow_back"
            app:tint="@color/icon_title" />

        <TextView
            style="@style/TitleTextStyle"
            android:paddingStart="@dimen/title_padding_start"
            android:paddingEnd="0dp"
            android:text="@string/settings" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_padding"
        android:layout_marginBottom="@dimen/text_padding">

        <TextView
            style="@style/SettingsLinesStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/black_theme" />

        <Switch
            android:id="@+id/switchDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <TextView
        style="@style/SettingsLinesStyle"
        android:id="@+id/share_app"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/share_mode" />

    <TextView
        style="@style/SettingsLinesStyle"
        android:id="@+id/message_support"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/support_mode" />

    <TextView
        style="@style/SettingsLinesStyle"
        android:id="@+id/agreement"
        android:text="@string/agreement"
        app:drawableEndCompat="@drawable/arrow_forward" />


</LinearLayout>