<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_bg"
    >

    <!-- Ручка для свайпа -->
    <View
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/search_area"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp" />

    <!-- Информация о плейлисте  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">



        <!-- Обложка  -->
        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@android:color/transparent">

            <ImageView
                android:id="@+id/menuCoverImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_cover_312" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/menuPlaylistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/media_h2"
                android:textFontWeight="400"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/menuTrackCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/singer_search"
                android:textFontWeight="400"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

    <!-- Пункт "Поделиться" -->
    <TextView
        android:id="@+id/menuShareItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp"
        android:text="@string/share"
        android:textSize="16sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/media_h2"
        android:clickable="true"
        android:textFontWeight="400"
        android:paddingStart="16dp"
        android:paddingEnd="4dp"
        />

    <!-- Пункт "Редактировать информацию" -->
    <TextView
        android:id="@+id/menuEditItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp"
        android:text="@string/edit_playlist"
        android:textSize="16sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/media_h2"
        android:clickable="true"
        android:textFontWeight="400"
        android:paddingStart="16dp"
        android:paddingEnd="4dp"
         />

    <!-- Пункт "Удалить плейлист" -->
    <TextView
        android:id="@+id/menuDeleteItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp"
        android:text="@string/delete_playlist_menu"
        android:textSize="16sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/media_h2"
        android:clickable="true"
        android:textFontWeight="400"
        android:paddingStart="16dp"
        android:paddingEnd="4dp"
         />

</LinearLayout>