<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Обложка во всю ширину -->
            <androidx.cardview.widget.CardView
                android:id="@+id/coverCardView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/coverImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder_cover_312" />

            </androidx.cardview.widget.CardView>

            <!-- Кнопка назад -->
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:src="@drawable/ic_arrow_back_24"
                app:tint="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Название плейлиста -->
            <TextView
                android:id="@+id/playlistNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ys_display_bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textFontWeight="700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coverCardView"
                tools:text="@string/test" />

            <!-- Описание -->
            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/playlist_description"
                android:textSize="18sp"
                android:textFontWeight="400"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playlistNameTextView"
                tools:text="@string/test" />

            <!-- Длительность и количество треков -->
            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView">

                <TextView
                    android:id="@+id/durationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ys_display_regular"
                    android:textColor="@color/playlist_description"
                    android:textSize="18sp"
                    android:textFontWeight="400"
                    tools:text="@string/test" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/singer_point_time"
                    android:textColor="@color/playlist_description"
                    android:textSize="18sp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:id="@+id/trackCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ys_display_regular"
                    android:textColor="@color/playlist_description"
                    android:textSize="18sp"
                    android:textFontWeight="400"
                    tools:text="@string/test" />

            </LinearLayout>

            <!-- Кнопки -->
            <LinearLayout
                android:id="@+id/buttonsLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoLayout">

                <ImageButton
                    android:id="@+id/shareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share_24"
                    android:background="@null"
                    app:tint="@color/playlist_description" />

                <ImageButton
                    android:id="@+id/menuButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_menu_24"
                    android:background="@null"
                    app:tint="@color/playlist_description" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Затемнение фона для списка треков -->
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1A1B2280"
        android:visibility="gone" />

    <!-- BottomSheetContainer для списка треков -->
    <FrameLayout
        android:id="@+id/bottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:paddingBottom="16dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="false"
        app:behavior_peekHeight="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/search_area"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tracksRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone" />

            <!-- Заглушка Треков нет  -->
            <TextView
                android:id="@+id/emptyTracksLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingTop="12dp"
                android:text="@string/no_tracks_in_playlist"
                android:textSize="19sp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/placeholder_text"
                android:textFontWeight="500"
                android:visibility="gone" />

        </LinearLayout>

    </FrameLayout>

    <!-- Затемнение фона для меню -->
    <View
        android:id="@+id/menuOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1A1B2280"
        android:visibility="gone" />

    <!-- BottomSheetContainer для меню -->
    <FrameLayout
        android:id="@+id/menuBottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg"
        android:paddingBottom="16dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp">

        <include layout="@layout/bottom_sheet_playlist_menu" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>